Update supabase and api URLs for images storage

--- a/src/app/components/cart-experience/cart-experience.component.html
+++ b/src/app/components/cart-experience/cart-experience.component.html
@@ -1,6 +1,6 @@
 <article class="cart__card">
 
-    <img class="cart__icon" [src]=" experience.images.length > 0 ? 'https://fzjqlxogwhycbjgrxtlo.supabase.co/storage/v1/object/public/trekangle-files/' + experience.images[0] : 'https://www.svgrepo.com/show/508699/landscape-placeholder.svg' " alt="experience icon">
+    <img class="cart__icon" [src]=" experience.images.length > 0 ? 'https://squctahczjhynshgqbyv.supabase.co/storage/v1/object/public/trekangle-files/' + experience.images[0] : 'https://www.svgrepo.com/show/508699/landscape-placeholder.svg' " alt="experience icon">
 
     <div class="cart-container">
         <p class="cart__title">{{ experience.name }}</p>
