--- a/src/app/components/mobile-top-experience/mobile-top-experience.component.html
+++ b/src/app/components/mobile-top-experience/mobile-top-experience.component.html
@@ -1,6 +1,6 @@
 <article class="mobile-experience__card">
     <div class="mobile-experience__card__image">
-        <img [src]=" image ? 'https://fzjqlxogwhycbjgrxtlo.supabase.co/storage/v1/object/public/trekangle-files/' + image : 'https://www.svgrepo.com/show/508699/landscape-placeholder.svg' " alt="Property Image">
+        <img [src]=" image ? 'https://squctahczjhynshgqbyv.supabase.co/storage/v1/object/public/trekangle-files/' + image : 'https://www.svgrepo.com/show/508699/landscape-placeholder.svg' " alt="Property Image">
     </div>
     <div class="mobile-experience__card__details">
         <h2 class="mobile-experience__card__title">{{title}}</h2>
