--- a/src/app/domains/experience-page/experience-page.component.html
+++ b/src/app/domains/experience-page/experience-page.component.html
@@ -5,10 +5,10 @@
     <h1 class="title-bar">{{ experience()?.name }}</h1>
 
     <section class="images">
-        <img [src]="'https://fzjqlxogwhycbjgrxtlo.supabase.co/storage/v1/object/public/trekangle-files/' + experience()?.images[0]" alt="Main Image" />
-        <img [src]="'https://fzjqlxogwhycbjgrxtlo.supabase.co/storage/v1/object/public/trekangle-files/' + experience()?.images[1]" alt="Secundary Image" />
-        <img [src]="'https://fzjqlxogwhycbjgrxtlo.supabase.co/storage/v1/object/public/trekangle-files/' + experience()?.images[2]" alt="Secundary Image" />
-        <img [src]="'https://fzjqlxogwhycbjgrxtlo.supabase.co/storage/v1/object/public/trekangle-files/' + experience()?.images[3]" alt="Secundary Image" />
+        <img [src]="'https://squctahczjhynshgqbyv.supabase.co/storage/v1/object/public/trekangle-files/' + experience()?.images[0]" alt="Main Image" />
+        <img [src]="'https://squctahczjhynshgqbyv.supabase.co/storage/v1/object/public/trekangle-files/' + experience()?.images[1]" alt="Secundary Image" />
+        <img [src]="'https://squctahczjhynshgqbyv.supabase.co/storage/v1/object/public/trekangle-files/' + experience()?.images[2]" alt="Secundary Image" />
+        <img [src]="'https://squctahczjhynshgqbyv.supabase.co/storage/v1/object/public/trekangle-files/' + experience()?.images[3]" alt="Secundary Image" />
     </section>
 
     <section class="content">
