--- a/src/app/domains/locations/locations.component.html
+++ b/src/app/domains/locations/locations.component.html
@@ -27,7 +27,7 @@
                 <a [routerLink]="['/experience', experience._id]">
                     <article class="booking__card">
 
-                        <img class="booking__icon" [src]=" experience.images ? 'https://fzjqlxogwhycbjgrxtlo.supabase.co/storage/v1/object/public/trekangle-files/' + experience.images[0] : 'https://www.svgrepo.com/show/508699/landscape-placeholder.svg' "
+                        <img class="booking__icon" [src]=" experience.images ? 'https://squctahczjhynshgqbyv.supabase.co/storage/v1/object/public/trekangle-files/' + experience.images[0] : 'https://www.svgrepo.com/show/508699/landscape-placeholder.svg' "
                             alt="experience icon">
 
                         <div class="booking-container">
